Fixed a few alignments in the edit button

--- a/react-softuni-project/src/components/layout/Navbar.css
+++ b/react-softuni-project/src/components/layout/Navbar.css
@@ -34,10 +34,26 @@ display: flex;
     font-size: 1.1rem;
     line-height: 1.5;
     border-radius: 0.25rem;
-            &:hover {
-            background-color: rgb(2, 172, 172);
-            /* Change color on hover */
-        }
+
+    &:hover {
+        background-color: rgb(2, 172, 172);
+        /* Change color on hover */
+    }
+}
+
+.edit-custom-button {
+    margin-left: 0.3rem;
+    color: white;
+    background-color: teal;
+    border: none;
+    padding: 0.35rem 1rem;
+    font-size: 1.1rem;
+    line-height: 1.5;
+    border-radius: 0.25rem;
+    &:hover {
+        background-color: rgb(2, 172, 172);
+        /* Change color on hover */
+    }
 }
 
 .button:disabled {
